--- a/Scribe/Base.lproj/AppScreen.storyboard
+++ b/Scribe/Base.lproj/AppScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -19,27 +19,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eyk-EK-raM" userLabel="TopSpace">
-                                <rect key="frame" x="0.0" y="47" width="375" height="36.666666666666657"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="36.333333333333343"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xOG-9z-mVQ" userLabel="LogoSpace">
-                                <rect key="frame" x="0.0" y="193.33333333333334" width="375" height="36.333333333333343"/>
+                                <rect key="frame" x="0.0" y="195.66666666666666" width="375" height="36.333333333333343"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I5E-HP-H2z" userLabel="SVSpace">
-                                <rect key="frame" x="0.0" y="621" width="375" height="65.666666666666629"/>
+                                <rect key="frame" x="0.0" y="621.33333333333337" width="375" height="65.666666666666629"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SHS-hN-aPL" userLabel="BottomSpace">
-                                <rect key="frame" x="0.0" y="741.33333333333337" width="375" height="36.666666666666629"/>
+                                <rect key="frame" x="0.0" y="741.66666666666663" width="375" height="36.333333333333371"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kI5-w9-te5" userLabel="SVBkrd">
-                                <rect key="frame" x="18.666666666666657" y="686.66666666666663" width="337.66666666666674" height="54.666666666666629"/>
+                                <rect key="frame" x="18.666666666666657" y="687" width="337.66666666666674" height="54.666666666666629"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2QI-f0-YLj" userLabel="SwitchView">
-                                <rect key="frame" x="18.666666666666657" y="686.66666666666663" width="337.66666666666674" height="54.666666666666629"/>
+                                <rect key="frame" x="18.666666666666657" y="687" width="337.66666666666674" height="54.666666666666629"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
@@ -47,85 +47,85 @@
                                 </state>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="privacyDownArrow" translatesAutoresizingMaskIntoConstraints="NO" id="uAP-y9-G5O" userLabel="PrivacyScroll">
-                                <rect key="frame" x="165" y="644" width="45" height="29.666666666666629"/>
+                                <rect key="frame" x="165" y="644.33333333333337" width="45" height="29.666666666666629"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="uAP-y9-G5O" secondAttribute="height" multiplier="111:73" id="xJq-LF-0BF"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PZJ-cM-o4X" userLabel="PrivacyBkrd">
-                                <rect key="frame" x="18.666666666666657" y="229.66666666666666" width="337.66666666666674" height="391.33333333333337"/>
+                                <rect key="frame" x="18.666666666666657" y="231.99999999999997" width="337.66666666666674" height="389.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemGray2Color"/>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" indicatorStyle="black" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ey5-Jf-rU1" userLabel="PrivTextView">
-                                <rect key="frame" x="35.666666666666657" y="239.66666666666666" width="303.66666666666674" height="371.33333333333337"/>
+                                <rect key="frame" x="35.666666666666657" y="241.99999999999997" width="303.66666666666674" height="369.33333333333326"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="afZ-cI-Uqj" userLabel="GHBkrd">
-                                <rect key="frame" x="18.666666666666657" y="509.33333333333331" width="337.66666666666674" height="111.66666666666669"/>
+                                <rect key="frame" x="18.666666666666657" y="510.33333333333326" width="337.66666666666674" height="111"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GitHubCorner" translatesAutoresizingMaskIntoConstraints="NO" id="8Mn-6Y-5tR" userLabel="GHCorner">
-                                <rect key="frame" x="297" y="509.33333333333331" width="59.333333333333314" height="59.333333333333314"/>
+                                <rect key="frame" x="297" y="510.33333333333331" width="59.333333333333314" height="59.333333333333314"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8Mn-6Y-5tR" secondAttribute="height" multiplier="1:1" id="Ocs-kF-PRu"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QHP-Un-zQg" userLabel="GHTextView">
-                                <rect key="frame" x="35.666666666666657" y="519.33333333333337" width="303.66666666666674" height="91.666666666666629"/>
+                                <rect key="frame" x="35.666666666666657" y="520.33333333333337" width="303.66666666666674" height="91"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cn2-6S-lTL" userLabel="GitHubBtn">
-                                <rect key="frame" x="18.666666666666657" y="509.33333333333331" width="337.66666666666674" height="111.66666666666669"/>
+                                <rect key="frame" x="18.666666666666657" y="510.33333333333326" width="337.66666666666674" height="111"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a6P-Fj-0z7" userLabel="AppTextBkrd">
-                                <rect key="frame" x="18.666666666666657" y="229.66666666666663" width="337.66666666666674" height="264"/>
+                                <rect key="frame" x="18.666666666666657" y="232" width="337.66666666666674" height="263"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="linkCornerBackground" translatesAutoresizingMaskIntoConstraints="NO" id="h2H-6t-AEh" userLabel="SettingsCorner">
-                                <rect key="frame" x="297" y="229.66666666666666" width="59.333333333333314" height="59.333333333333343"/>
+                                <rect key="frame" x="297" y="232" width="59.333333333333314" height="59"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="h2H-6t-AEh" secondAttribute="height" multiplier="1:1" id="DCl-i8-tK2"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wel-aS-UT8" userLabel="TopIconPad">
-                                <rect key="frame" x="318.66666666666669" y="237.66666666666666" width="29.666666666666686" height="29.666666666666657"/>
+                                <rect key="frame" x="318.66666666666669" y="240" width="29.666666666666686" height="29.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Wel-aS-UT8" secondAttribute="height" multiplier="1:1" id="bq5-J5-pQt"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pec-99-6H5" userLabel="TopIconPhone">
-                                <rect key="frame" x="321.66666666666669" y="234.66666666666666" width="29.666666666666686" height="29.666666666666657"/>
+                                <rect key="frame" x="321.66666666666669" y="237" width="29.666666666666686" height="29.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Pec-99-6H5" secondAttribute="height" multiplier="1:1" id="F5D-YM-psf"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="w88-X2-5bx" userLabel="AppTextView">
-                                <rect key="frame" x="35.666666666666657" y="239.66666666666663" width="303.66666666666674" height="244"/>
+                                <rect key="frame" x="35.666666666666657" y="242" width="303.66666666666674" height="243"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wNQ-WS-San" userLabel="SettingsBtn">
-                                <rect key="frame" x="18.666666666666657" y="229.66666666666663" width="337.66666666666674" height="264"/>
+                                <rect key="frame" x="18.666666666666657" y="232" width="337.66666666666674" height="263"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScribeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Oxz-Zq-2g7">
-                                <rect key="frame" x="73.333333333333329" y="83.666666666666657" width="228.33333333333337" height="109.66666666666666"/>
+                                <rect key="frame" x="73.666666666666671" y="86.333333333333343" width="227.66666666666663" height="109.33333333333334"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Oxz-Zq-2g7" secondAttribute="height" multiplier="981:471" id="fLZ-Jn-Qjj"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="scribeBlue"/>
+                        <color key="backgroundColor" name="scribeAppBackground"/>
                         <constraints>
                             <constraint firstItem="Cn2-6S-lTL" firstAttribute="centerY" secondItem="afZ-cI-Uqj" secondAttribute="centerY" id="1hd-Yi-9Ss"/>
                             <constraint firstItem="eyk-EK-raM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="2Ph-fn-dx0"/>
@@ -231,13 +231,14 @@
             <point key="canvasLocation" x="56.799999999999997" y="45.073891625615765"/>
         </scene>
     </scenes>
+    <color key="tintColor" name="scribeAppBackground"/>
     <resources>
         <image name="GitHubCorner" width="80" height="80"/>
         <image name="ScribeLogo" width="831" height="405"/>
         <image name="linkCornerBackground" width="1024" height="1024"/>
         <image name="privacyDownArrow" width="111" height="73"/>
-        <namedColor name="scribeBlue">
-            <color red="0.40392156862745099" green="0.72549019607843135" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="scribeAppBackground">
+            <color red="0.36862745098039218" green="0.70980392156862748" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
