--- a/Scribe/Base.lproj/AppScreen.storyboard
+++ b/Scribe/Base.lproj/AppScreen.storyboard
@@ -64,57 +64,57 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="afZ-cI-Uqj" userLabel="GHBkrd">
-                                <rect key="frame" x="18.666666666666657" y="510.33333333333326" width="337.66666666666674" height="111"/>
+                                <rect key="frame" x="18.666666666666657" y="532.33333333333337" width="337.66666666666674" height="126.66666666666663"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GitHubCorner" translatesAutoresizingMaskIntoConstraints="NO" id="8Mn-6Y-5tR" userLabel="GHCorner">
-                                <rect key="frame" x="297" y="510.33333333333331" width="59.333333333333314" height="59.333333333333314"/>
+                                <rect key="frame" x="292.66666666666669" y="532.33333333333337" width="63.666666666666686" height="63.666666666666629"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8Mn-6Y-5tR" secondAttribute="height" multiplier="1:1" id="Ocs-kF-PRu"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QHP-Un-zQg" userLabel="GHTextView">
-                                <rect key="frame" x="35.666666666666657" y="520.33333333333337" width="303.66666666666674" height="91"/>
+                                <rect key="frame" x="35.666666666666657" y="542.33333333333337" width="303.66666666666674" height="106.66666666666663"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cn2-6S-lTL" userLabel="GitHubBtn">
-                                <rect key="frame" x="18.666666666666657" y="510.33333333333326" width="337.66666666666674" height="111"/>
+                                <rect key="frame" x="18.666666666666657" y="532.33333333333337" width="337.66666666666674" height="126.66666666666663"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a6P-Fj-0z7" userLabel="AppTextBkrd">
-                                <rect key="frame" x="18.666666666666657" y="232" width="337.66666666666674" height="263"/>
+                                <rect key="frame" x="18.666666666666657" y="231.99999999999997" width="337.66666666666674" height="282.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="linkCornerBackground" translatesAutoresizingMaskIntoConstraints="NO" id="h2H-6t-AEh" userLabel="SettingsCorner">
-                                <rect key="frame" x="297" y="232" width="59.333333333333314" height="59"/>
+                                <rect key="frame" x="292.66666666666669" y="231.99999999999997" width="63.666666666666686" height="63.666666666666657"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="h2H-6t-AEh" secondAttribute="height" multiplier="1:1" id="DCl-i8-tK2"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wel-aS-UT8" userLabel="TopIconPad">
-                                <rect key="frame" x="318.66666666666669" y="240" width="29.666666666666686" height="29.666666666666686"/>
+                                <rect key="frame" x="316.33333333333331" y="240" width="32" height="31.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Wel-aS-UT8" secondAttribute="height" multiplier="1:1" id="bq5-J5-pQt"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pec-99-6H5" userLabel="TopIconPhone">
-                                <rect key="frame" x="321.66666666666669" y="237" width="29.666666666666686" height="29.666666666666686"/>
+                                <rect key="frame" x="319.33333333333331" y="237" width="32" height="31.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Pec-99-6H5" secondAttribute="height" multiplier="1:1" id="F5D-YM-psf"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="w88-X2-5bx" userLabel="AppTextView">
-                                <rect key="frame" x="35.666666666666657" y="242" width="303.66666666666674" height="243"/>
+                                <rect key="frame" x="35.666666666666657" y="241.99999999999997" width="303.66666666666674" height="262.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wNQ-WS-San" userLabel="SettingsBtn">
-                                <rect key="frame" x="18.666666666666657" y="232" width="337.66666666666674" height="263"/>
+                                <rect key="frame" x="18.666666666666657" y="231.99999999999997" width="337.66666666666674" height="282.33333333333326"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScribeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Oxz-Zq-2g7">
@@ -142,30 +142,30 @@
                             <constraint firstItem="wNQ-WS-San" firstAttribute="centerY" secondItem="a6P-Fj-0z7" secondAttribute="centerY" id="HdS-uL-ndh"/>
                             <constraint firstItem="PZJ-cM-o4X" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.535" id="JFC-32-x5S"/>
                             <constraint firstItem="kI5-w9-te5" firstAttribute="centerY" secondItem="2QI-f0-YLj" secondAttribute="centerY" id="K5D-RR-0fI"/>
-                            <constraint firstItem="PZJ-cM-o4X" firstAttribute="bottom" secondItem="afZ-cI-Uqj" secondAttribute="bottom" id="K7f-oa-7i9"/>
                             <constraint firstItem="8Mn-6Y-5tR" firstAttribute="trailing" secondItem="afZ-cI-Uqj" secondAttribute="trailing" id="MQ8-8A-Fg9"/>
                             <constraint firstItem="QHP-Un-zQg" firstAttribute="centerX" secondItem="w88-X2-5bx" secondAttribute="centerX" id="Mx0-WJ-8gL"/>
-                            <constraint firstItem="a6P-Fj-0z7" firstAttribute="height" secondItem="PZJ-cM-o4X" secondAttribute="height" multiplier="0.675" id="NND-cL-mio"/>
+                            <constraint firstItem="a6P-Fj-0z7" firstAttribute="height" secondItem="PZJ-cM-o4X" secondAttribute="height" multiplier="0.725" id="NND-cL-mio"/>
                             <constraint firstItem="I5E-HP-H2z" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.09" id="NRy-YR-9Sh"/>
                             <constraint firstItem="h2H-6t-AEh" firstAttribute="height" secondItem="a6P-Fj-0z7" secondAttribute="height" multiplier="0.225" id="QXa-kJ-cx3"/>
                             <constraint firstItem="afZ-cI-Uqj" firstAttribute="width" secondItem="a6P-Fj-0z7" secondAttribute="width" id="R9N-HL-mFu"/>
                             <constraint firstItem="Pec-99-6H5" firstAttribute="height" secondItem="h2H-6t-AEh" secondAttribute="height" multiplier="0.5" id="Rh4-MU-MWy"/>
                             <constraint firstItem="Pec-99-6H5" firstAttribute="trailing" secondItem="h2H-6t-AEh" secondAttribute="trailing" constant="-5" id="TQE-o3-vtc"/>
                             <constraint firstItem="kI5-w9-te5" firstAttribute="top" secondItem="I5E-HP-H2z" secondAttribute="bottom" id="Tgj-au-PtE"/>
+                            <constraint firstItem="afZ-cI-Uqj" firstAttribute="bottom" secondItem="uAP-y9-G5O" secondAttribute="bottom" constant="-15" id="U6v-Dx-8MK"/>
                             <constraint firstItem="I5E-HP-H2z" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UWV-26-cDg"/>
                             <constraint firstItem="QHP-Un-zQg" firstAttribute="bottom" secondItem="afZ-cI-Uqj" secondAttribute="bottom" constant="-10" id="UWe-96-ZBf"/>
                             <constraint firstItem="kI5-w9-te5" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.075" id="Uon-y0-Bq0"/>
                             <constraint firstItem="SHS-hN-aPL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Vsz-v1-D27"/>
+                            <constraint firstItem="ey5-Jf-rU1" firstAttribute="bottom" secondItem="PZJ-cM-o4X" secondAttribute="bottom" constant="-10" id="X2r-q4-LmD"/>
                             <constraint firstItem="h2H-6t-AEh" firstAttribute="width" secondItem="8Mn-6Y-5tR" secondAttribute="width" id="Y2C-gX-WZo"/>
                             <constraint firstItem="Cn2-6S-lTL" firstAttribute="centerX" secondItem="afZ-cI-Uqj" secondAttribute="centerX" id="Z3y-u1-mcc"/>
                             <constraint firstItem="wNQ-WS-San" firstAttribute="centerX" secondItem="a6P-Fj-0z7" secondAttribute="centerX" id="Z4H-UC-bX1"/>
                             <constraint firstItem="kI5-w9-te5" firstAttribute="width" secondItem="2QI-f0-YLj" secondAttribute="width" id="a7Y-RS-PKv"/>
                             <constraint firstItem="Pec-99-6H5" firstAttribute="top" secondItem="h2H-6t-AEh" secondAttribute="top" constant="5" id="aD2-4x-ENf"/>
-                            <constraint firstItem="afZ-cI-Uqj" firstAttribute="height" secondItem="PZJ-cM-o4X" secondAttribute="height" multiplier="0.285" id="bsL-vg-R7A"/>
+                            <constraint firstItem="afZ-cI-Uqj" firstAttribute="height" secondItem="PZJ-cM-o4X" secondAttribute="height" multiplier="0.325" id="bsL-vg-R7A"/>
                             <constraint firstItem="uAP-y9-G5O" firstAttribute="centerY" secondItem="I5E-HP-H2z" secondAttribute="centerY" constant="5" id="ch1-7G-vTt"/>
                             <constraint firstItem="Cn2-6S-lTL" firstAttribute="height" secondItem="afZ-cI-Uqj" secondAttribute="height" id="cko-87-sP7"/>
                             <constraint firstItem="a6P-Fj-0z7" firstAttribute="centerX" secondItem="w88-X2-5bx" secondAttribute="centerX" id="cz1-Rl-god"/>
-                            <constraint firstItem="ey5-Jf-rU1" firstAttribute="bottom" secondItem="QHP-Un-zQg" secondAttribute="bottom" id="dgT-IF-l9w"/>
                             <constraint firstItem="xOG-9z-mVQ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fhd-JE-4TH"/>
                             <constraint firstItem="a6P-Fj-0z7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fyn-p2-av8"/>
                             <constraint firstItem="Oxz-Zq-2g7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hCU-MF-j2K"/>
